--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "external/fastcrypto"]
-	path = external/fastcrypto
-	url = https://github.com/MystenLabs/fastcrypto
+[submodule "ecvrf/fastcrypto"]
+	path = ecvrf/fastcrypto
+	url = https://github.com/MystenLabs/fastcrypto.git
